[package]
name = "rafle"
version = "0.1.0"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4", default-features = false }
ink_metadata = { version = "3.4", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4", default-features = false }
ink_storage = { version = "3.4", default-features = false }
ink_lang = { version = "3.4", default-features = false }
ink_prelude = { version = "3.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
rand_chacha = { version = "0.3.1", default-features = false}

#require to clone it because v2.3 is not released yet
openbrush = { git = "https://github.com/GuiGou12358/openbrush-contracts", default-features = false, features = ["access_control"]}

[lib]
name = "rafle"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
