[package]
name = "lucky"
version = "0.1.0"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0", default-features = false, features = ["access_control"]}

rand_chacha = { version = "0.3.1", default-features = false}

[lib]
name = "lucky"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
