[package]
name = "dapps_staking_proxy"
version = "0.1.0"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.3", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3", default-features = false }
ink_storage = { version = "3.3", default-features = false }
ink_lang = { version = "3.3", default-features = false }
ink_prelude = { version = "3.3", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { version = "2.2.0", default-features = false, features = [] }

rafle = { path = "../rafle", default-features = false, features = ["ink-as-dependency"]}
rafle_lib = { path = "../../rafle_lib", default-features = false }

#dapps_staking_extension = { git = "https://github.com/AstarNetwork/chain-extension-contracts", default-features = false }
dapps_staking_extension = { git = "https://github.com/GuiGou12358/chain-extension-contracts", default-features = false }


[lib]
name = "dapps_staking_proxy"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "rafle/std",
    "rafle_lib/std",
    "dapps_staking_extension/std"
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

